fix: align filters to middle of bar

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -216,6 +216,7 @@ h2 {
 
   &-filters {
     flex: 1;
+    text-align: center;
   }
 
   .info {
